to fix the hero wrap on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ div {
     margin-top: 0;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap-reverse;
     padding: 60px;
     gap: 30px;
 }
